--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,4 +1,5 @@
 <resources>
-    <string name="app_name">nextstep</string>
+    <string name="app_name">Next step</string>
     <string name="action_settings">Settings</string>
+    <string name="new_task">New Task</string>
 </resources>
